# MCD505L-LABORATORIO-DE-INTELIGENCIA-ARTIFICIAL-CON-PYTHON

./: Problema 3.py  Problema 4.py  README.md  calculadora_matricial.py  pyproject.toml  sesion_log.txt
Laboratorio Unidad 4 y Asignación/: Inventario.py  sistema_bancario.py
Practica 2/: Problema 1.py  Problema 2.py  Problema 4.py
Practica 5/: calculadora_matricial.py
Práctica 1/: Parte1.py  Parte3.py  Parte4.py  Problema_1.py  Problema_2.py  Problema_4.py
Práctica 6/: README.md  analisis.py  catalogo_libros.csv  limpieza.py  main.py  parser.py  requirements.txt  scraper.py
